# NucleoLVGLTest

./: CMakeLists.txt  app.overlay  prj.conf
llext/: README.md  hello_world_ext.c
src/: app_cpp.h  app_main.cpp  cpp_examples.cpp  cpp_examples.hpp  fpu_demo.cpp  fpu_demo.hpp  lvgl_demo.cpp  lvgl_demo.hpp  main.c  msgq_demo.cpp  msgq_demo.hpp  oled_demo.cpp  oled_demo.hpp  rtc_service.cpp  rtc_service.hpp  rtc_shell.cpp  top_stats.cpp  top_stats.hpp
src/monitor/: top_collector.cpp  top_collector.hpp  top_model.hpp  top_renderer.cpp  top_renderer.hpp
ui/: project.info  ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h
ui/components/: ui_comp_hook.c
ui/images/: ui_img_audio_wave_1_png.c  ui_img_btn_1_act_png.c  ui_img_btn_1_inact_png.c  ui_img_btn_eq_act_png.c  ui_img_btn_eq_inact_png.c  ui_img_btn_knob_png.c  ui_img_btn_play_act_png.c  ui_img_btn_play_inact_png.c  ui_img_indicator_ver_png.c  ui_img_pot_hor_knob_png.c  ui_img_pot_hor_line_png.c  ui_img_pot_hor_line_tempo_png.c  ui_img_pot_ver_knob_png.c  ui_img_pot_ver_line_png.c
ui/lvgl/: lvgl.h
ui/screens/: ui_Screen1.c  ui_Screen1.h
